// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Should increment counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    test
  </button>
</div>
`;

exports[`ProductCard Should show correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
